sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:7: error: ';' expected but ',' found.
      if (!plusPetit(j,j+1)) {echange(j,j+1),b=1}
                                            ^