sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var b:Int=0
  for (i <- (0 to getNombreValeurs()-2).reverse) {
    b=0
    for (j <- 0 to i) {
      if (!plusPetit(j,j+1)) {echange(j,j+1),b=1}
      if (b==0) {return null}
      
    }
  }
}